# nginx-ingress-integrator-operator

./: .flake8  .gitignore  .licenserc.yaml  .lycheeignore  .pre-commit-config.yaml  .vale.ini  .valeignore  .woke.yml  CONTRIBUTING.md  Makefile  Makefile.docs  README.md  actions.yaml  artifacts.yaml  charmcraft.yaml  check_woke.sh  concierge-juju2-microk8s.yaml  concierge-juju3-microk8s.yaml  config.yaml  index.html  juju-crashdump-128bdead-e5dc-4a9d-8765-a1773a06a824.tar.xz  juju-crashdump-2e79728c-6c30-4a22-9265-f04229bc2069.tar.xz  metadata.yaml  pyproject.toml  renovate.json  requirements.txt  run_tests  spread.yaml  tox.ini  tox.toml
.github/: .jira_sync_config.yaml  copilot-instructions.md  pull_request_template.md
.github/workflows/: comment.yaml  docs.yaml  integration_test.yaml  integration_test_arm64.yaml  integration_test_k8s_1_20.yaml  integration_test_k8s_1_21.yaml  promote_charm.yaml  publish_charm.yaml  publish_charm_arm64.yaml  terraform-docs.yaml  test.yaml  test_and_publish_charm.yaml  test_terraform_files.yaml
1009/: index.html
1009/data/: behaviors.json  packages.json  suites.csv  suites.json  timeline.json
1009/export/: influxDbData.txt  prometheusData.txt
1009/history/: duration-trend.json  history.json  retry-trend.json
1009/widgets/: categories-trend.json  duration.json  executors.json  history-trend.json  severity.json  summary.json
1042/: index.html
1042/data/: behaviors.json  packages.json  suites.csv  suites.json  timeline.json
1042/export/: influxDbData.txt  prometheusData.txt
1042/history/: categories-trend.json  duration-trend.json  history.json
1042/widgets/: executors.json  history-trend.json  retry-trend.json  severity.json  status-chart.json  summary.json
1056/: index.html
1056/data/: behaviors.json  packages.json  suites.csv  suites.json  timeline.json
1056/export/: influxDbData.txt  prometheusData.txt
1056/history/: categories-trend.json  history-trend.json  history.json
1056/widgets/: duration-trend.json  duration.json  executors.json  retry-trend.json  severity.json  summary.json
1067/: index.html
1067/data/: behaviors.json  packages.json  suites.csv  suites.json  timeline.json
1067/export/: influxDbData.txt  prometheusData.txt
1067/history/: history.json
1067/widgets/: summary.json  (+7 more)
1077/: index.html
1098/: index.html
1101/: index.html
1111/: index.html
1116/: index.html
1119/: index.html
824/: index.html
825/: index.html
826/: index.html
827/: index.html
828/: index.html
829/: index.html
830/: index.html
831/: index.html
832/: index.html
833/: index.html
835/: index.html
840/: index.html
852/: index.html
856/: index.html
883/: index.html
893/: index.html
900/: index.html
907/: index.html
921/: index.html
937/: index.html
948/: index.html
956/: index.html
963/: index.html
970/: index.html
972/: index.html
979/: index.html
982/: index.html
docs/: .custom_wordlist.txt  Makefile  changelog.md  conf.py  index.md  requirements.txt  tutorial.md
src/: charm.py  consts.py  controller.py  endpoint_slice_controller.py  endpoints_controller.py  exceptions.py  helpers.py  ingress_controller.py  ingress_definition.py  options.py  secret_controller.py  service_controller.py  tls_relation.py
terraform/: README.md  main.tf  variables.tf  versions.tf
tests/: __init__.py  conftest.py  test_charm.py
(+1690 files in other folders)
